--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "localization_python"]
-	path = localization_python
+	path = lib/localization_python
 	url = git@github.com:TAMU-Robomasters/localization_python.git
