--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 requires-python = ">=3.10"
 dependencies = [
     "localization-python",
-    "numpy==2.0.1",
-    "opencv-python==4.12.0.88",
+    "numpy==2",
+    "opencv-python>=4.12.0.88",
     "pygame==2.6.1",
     "python-dotenv==1.1.1",
 ]
