--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "localization-sim"
 version = "0.1.0"
-requires-python = ">=3.10"
+requires-python = "==3.10.*" # Jetson Orin uses 3.10.12
 dependencies = [
     "localization-python",
-    "numpy==2",
-    "opencv-python>=4.12.0.88",
-    "pygame==2.6.1",
+    "numpy==2.*",
+    "opencv-python>=4.12.*",
+    "pygame>=2.6.*",
     "python-dotenv==1.1.1",
 ]
 
