--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = [
     "localization-python",
     "numpy==2.*",
     "opencv-python>=4.12.*",
+    "pathfinding-python",
     "pygame>=2.6.*",
     "python-dotenv==1.1.1",
 ]
@@ -13,7 +14,9 @@ dependencies = [
 [tool.uv.workspace]
 members = [
     "lib/localization_python",
+    "lib/pathfinding_python",
 ]
 
 [tool.uv.sources]
 localization-python = { workspace = true, editable = true }
+pathfinding-python = { workspace = true }
