--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ requires-python = "==3.10.*" # Jetson Orin uses 3.10.12
 dependencies = [
     "localization-python",
     "numpy==2.*",
-    "opencv-python>=4.12.*",
+    "opencv-python>=4.5, <5",
     "pathfinding-python",
-    "pygame>=2.6.*",
+    "pygame>=2.6, <3",
     "python-dotenv==1.1.1",
 ]
 
