Update env template

--- a/.env.template
+++ b/.env.template
@@ -9,4 +9,17 @@ SCREEN_COLOR='black'
 # The map inside "maps" to load.
 MAP="map3.jpeg"
 
+# Forces GPU usage on if True, off if False
+USE_CUPY=True
+
+# Set to False to disable pathfinding in the sim
+USE_PATHFINDER=True
+
+# Set to False to disable drawing particles in the sim
+DRAW_PARTICLES=True
+
+MAX_PARTICLES=1000
+
+
+
 
